force-app/main/default/objects/Client_Health_Check__c/Client_Health_Check__c.object-meta.xml
<CustomObject>
    <description>Used for Client Experience Teams to conduct Client Health Checks</description>
    <label>Client Health Check</label>
    <nameField>
        <label>Client Health Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Health Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>