force-app/main/default/objects/Client_Health_Check__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Plan is attached to.</description>
    <inlineHelpText>Account Plan is attached to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Health Checks</relationshipLabel>
    <relationshipName>Client_Health_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>