force-app/main/default/objects/Client_Health_Check__c/fields/ADP_ACP_Test_Results__c.field-meta.xml
<CustomField>
    <fullName>ADP_ACP_Test_Results__c</fullName>
    <description>Did the Plan Pass or Fail ADP + ACP Testing?</description>
    <inlineHelpText>Did the Plan Pass or Fail ADP + ACP Testing?</inlineHelpText>
    <label>ADP/ACP Test Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>