force-app/main/default/objects/Client_Health_Check__c/fields/Business_Industry__c.field-meta.xml
<CustomField>
    <fullName>Business_Industry__c</fullName>
    <description>Business/Indsutry from Account</description>
    <formula>TEXT(Account__r.Business_Industry__c)</formula>
    <inlineHelpText>If it is blank or needs to be changed, update it on the Account record</inlineHelpText>
    <label>Business/Industry</label>
    <type>Text</type>
</CustomField>