force-app/main/default/objects/Client_Health_Check__c/fields/Client_Health_Check_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Health_Check_Type__c</fullName>
    <description>What type of Client Health Check was conducted?</description>
    <inlineHelpText>What type of Client Health Check was conducted?</inlineHelpText>
    <label>Client Health Check Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple Health Check</fullName>
            </value>
            <value>
                <fullName>Detailed Health Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>