force-app/main/default/objects/Client_Health_Check__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that the Plan Health Check is Being Conducted with</description>
    <inlineHelpText>Contact that the Plan Health Check is Being Conducted with</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Health Checks</relationshipLabel>
    <relationshipName>Client_Health_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>