force-app/main/default/objects/Client_Health_Check__c/fields/CSAT_Rating__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Rating__c</fullName>
    <description>CSAT Score</description>
    <inlineHelpText>CSAT Score. If less than 5, please add detail in next box.</inlineHelpText>
    <label>CSAT Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>