force-app/main/default/objects/Client_Health_Check__c/fields/CSAT_Score_Notes__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Score_Notes__c</fullName>
    <description>CSAT Score Notes</description>
    <inlineHelpText>CSAT Score Notes. If the score was less than 5, please detail how we can improve.</inlineHelpText>
    <label>CSAT Score Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>