force-app/main/default/objects/Client_Health_Check__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <description>Date Client Health Check completed</description>
    <inlineHelpText>Date Client Health Check completed</inlineHelpText>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>