force-app/main/default/objects/Client_Health_Check__c/fields/Date_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Date_Scheduled__c</fullName>
    <description>Date Client Health check scheduled</description>
    <inlineHelpText>Date Client Health check scheduled</inlineHelpText>
    <label>Date Scheduled</label>
    <type>Date</type>
</CustomField>