force-app/main/default/objects/Client_Health_Check__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <description>Does current eligibility requirement fit their needs?</description>
    <inlineHelpText>Does current eligibility requirement fit their needs? If No and plan is Express K, suggest upgrade to Custom K</inlineHelpText>
    <label>Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>