force-app/main/default/objects/Client_Health_Check__c/fields/Enrollment_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Meeting__c</fullName>
    <description>Would client like an enrollment meeting?</description>
    <inlineHelpText>Would client like an enrollment meeting?</inlineHelpText>
    <label>Enrollment Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>