force-app/main/default/objects/Client_Health_Check__c/fields/ERISA_Fidelity_Bond__c.field-meta.xml
<CustomField>
    <fullName>ERISA_Fidelity_Bond__c</fullName>
    <description>Does the plan have a ERISA/Fidelity bond?</description>
    <inlineHelpText>Does the plan have a ERISA/Fidelity bond?</inlineHelpText>
    <label>ERISA/Fidelity Bond</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>