force-app/main/default/objects/Client_Health_Check__c/fields/Fund_Lineup_Notes__c.field-meta.xml
<CustomField>
    <fullName>Fund_Lineup_Notes__c</fullName>
    <description>Fund lineup notes</description>
    <inlineHelpText>Fund lineup notes</inlineHelpText>
    <label>Fund Lineup Notes</label>
    <type>TextArea</type>
</CustomField>