force-app/main/default/objects/Client_Health_Check__c/fields/Fund_Lineup_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Fund_Lineup_Satisfaction__c</fullName>
    <description>Are they happy with their current fund lineup?</description>
    <inlineHelpText>Are they happy with their current fund lineup? If No and Express K
- suggest upgrade to Custom K

If No and Custom K
- add/modify custom fund list 
- suggest adding PCRA (brokerage account)&quot;</inlineHelpText>
    <label>Fund Lineup Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>