force-app/main/default/objects/Client_Health_Check__c/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <description>General meeting notes</description>
    <inlineHelpText>General meeting notes</inlineHelpText>
    <label>Meeting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>