force-app/main/default/objects/Client_Health_Check__c/fields/Most_Recent_Review__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Review__c</fullName>
    <description>Date of the most recent review left by a Plan Sponsor or Trustee</description>
    <formula>Plan__r.Date_Most_Recent_Sponsor_Trustee_Review__c</formula>
    <inlineHelpText>Date of the most recent review left by a Plan Sponsor or Trustee</inlineHelpText>
    <label>Most Recent Review</label>
    <type>Date</type>
</CustomField>