force-app/main/default/objects/Client_Health_Check__c/fields/Most_Recent_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Sponsor__c</fullName>
    <formula>Plan__r.Most_Recent_CSAT_Score_Sponsor_Trustee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Sponsor CSAT Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>