force-app/main/default/objects/Client_Health_Check__c/fields/Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Open_Cases__c</fullName>
    <description>Are there any open cases?</description>
    <inlineHelpText>Are there any open cases? Review cases to see if we can resolve/follow up</inlineHelpText>
    <label>Open Cases</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>