force-app/main/default/objects/Client_Health_Check__c/fields/Open_Cases_Notes__c.field-meta.xml
<CustomField>
    <fullName>Open_Cases_Notes__c</fullName>
    <description>Notes on Open Cases</description>
    <inlineHelpText>Notes on Open Cases</inlineHelpText>
    <label>Open Cases Notes</label>
    <type>TextArea</type>
</CustomField>