force-app/main/default/objects/Client_Health_Check__c/fields/Open_Cases_Status__c.field-meta.xml
<CustomField>
    <fullName>Open_Cases_Status__c</fullName>
    <description>Are there open Cases on the Plan and what are the Statuses?</description>
    <inlineHelpText>Are there open Cases on the Plan and what are the Statuses? If Open, update the Case if the Sponsor has new information and provide the SLA.</inlineHelpText>
    <label>Open Cases Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Open and Expect Quick Resolution</fullName>
            </value>
            <value>
                <fullName>Open and Stuck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>