force-app/main/default/objects/Client_Health_Check__c/fields/Payroll_Integration__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Integration__c</fullName>
    <description>Partner Health Check</description>
    <inlineHelpText>Verifies if partner has payroll integration with Ubiquity</inlineHelpText>
    <label>Payroll Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>