force-app/main/default/objects/Client_Health_Check__c/fields/Payroll_Submission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Submission_Notes__c</fullName>
    <description>Notes on timeliness of Payroll Contributions</description>
    <inlineHelpText>Notes on timeliness of Payroll Contributions</inlineHelpText>
    <label>Payroll Submission Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>