force-app/main/default/objects/Client_Health_Check__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Plan this Health Check is being done for.</description>
    <inlineHelpText>The Plan this Health Check is being done for.</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Client Health Checks</relationshipLabel>
    <relationshipName>Client_Health_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>