force-app/main/default/objects/Client_Health_Check__c/fields/Profit_Sharing_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Profit_Sharing_Contributions__c</fullName>
    <description>Has plan ever made a profit sharing contribution? Do they like the PS option they have?</description>
    <inlineHelpText>Has plan ever made a profit sharing contribution? Do they like the PS option they have?</inlineHelpText>
    <label>Profit Sharing Contributions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>