force-app/main/default/objects/Client_Health_Check__c/fields/Referral_Requested__c.field-meta.xml
<CustomField>
    <fullName>Referral_Requested__c</fullName>
    <description>Was a referral requested?</description>
    <inlineHelpText>Was a referral requested?</inlineHelpText>
    <label>Referral Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>