force-app/main/default/objects/Client_Health_Check__c/fields/Review_Requested__c.field-meta.xml
<CustomField>
    <fullName>Review_Requested__c</fullName>
    <description>Was a review requested?</description>
    <inlineHelpText>Was a Google/TrustPilot review requested?</inlineHelpText>
    <label>Review Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>