force-app/main/default/objects/Client_Health_Check__c/fields/Sponsors_on_File__c.field-meta.xml
<CustomField>
    <fullName>Sponsors_on_File__c</fullName>
    <description>How many Plan Sponsors are on file?</description>
    <inlineHelpText>How many Plan Sponsors are on file? If only 1, suggest adding more.</inlineHelpText>
    <label>Sponsors on File</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>