force-app/main/default/objects/Client_Health_Check__c/fields/Timely_Invoice_Payment__c.field-meta.xml
<CustomField>
    <fullName>Timely_Invoice_Payment__c</fullName>
    <description>Have invoices been paid on time?</description>
    <inlineHelpText>Have invoices been paid on time?</inlineHelpText>
    <label>Timely Invoice Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>