force-app/main/default/objects/Client_Health_Check__c/fields/Timely_Payroll_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Timely_Payroll_Contributions__c</fullName>
    <description>Have Payroll Contributions been made in a timely manner?</description>
    <inlineHelpText>Have Payroll Contributions been made in a timely manner? If Yes, ask if interested in learning about EPS If No - Determine why haven&apos;t contributions been made timely and how to fix? - Remind clients about making contributions within 7 business days.</inlineHelpText>
    <label>Timely Payroll Contributions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>