force-app/main/default/objects/Client_Health_Check__c/fields/Top_Heavy_Test_Results__c.field-meta.xml
<CustomField>
    <fullName>Top_Heavy_Test_Results__c</fullName>
    <description>Did the Plan pass or fail Top Heavy Testing?</description>
    <inlineHelpText>Did the Plan pass or fail Top Heavy Testing?</inlineHelpText>
    <label>Top Heavy Test Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>