force-app/main/default/objects/Client_Health_Check__c/fields/Trustees_on_File__c.field-meta.xml
<CustomField>
    <fullName>Trustees_on_File__c</fullName>
    <description>How many Trustees are on file?</description>
    <inlineHelpText>How many Trustees are on file? If only 1, suggest adding another.</inlineHelpText>
    <label>Trustees on File</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>