force-app/main/default/objects/Client_Health_Check__c/fields/Vesting__c.field-meta.xml
<CustomField>
    <fullName>Vesting__c</fullName>
    <description>Does current vesting requirement fit their needs?</description>
    <inlineHelpText>Does current vesting requirement fit their needs? If No, explore how to amend plan if not doing Safe Harbor match
If No, and if Express K, suggest Custom K.</inlineHelpText>
    <label>Vesting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>