force-app/main/default/objects/Client_Health_Check__c/recordTypes/Detailed_Client_Health_Check.recordType-meta.xml
<RecordType>
    <fullName>Detailed_Client_Health_Check</fullName>
    <active>true</active>
    <description>Record Type for Complex Client Health Check</description>
    <label>Detailed Client Health Check</label>
</RecordType>