force-app/main/default/objects/Client_Health_Check__c/recordTypes/Simple_Client_Health_Check.recordType-meta.xml
<RecordType>
    <fullName>Simple_Client_Health_Check</fullName>
    <active>true</active>
    <description>Simple Client Health Check Record Type</description>
    <label>Simple Client Health Check</label>
</RecordType>